--- a/index.html
+++ b/index.html
@@ -6,37 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
+   <!-- <script src="main.js"></script> -->
 </head>
 <body>
     <div class = "container">
         <div class = "display">
-            <h5>IT-48 Bootleg Edition <br> Maryland Instruments</h5>
+            <h5>IT-48 Bootleg Edition <br> QWERTY Instruments</h5>
         </div>
         <div class="screen">
             <h1>5318008</h1>
         </div>
         <div class = "button-container">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
+            <button id = "seven">7</button>
+            <button id = "eight">8</button>
+            <button id = "nine">9</button>
+            <button>÷</button>
             <br>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
+            <button id = "four">4</button>
+            <button id = "five">5</button>
+            <button id = "six">6</button>
+            <button>+</button>
             <br>
             <button>1</button>
             <button>2</button>
             <button>3</button>
+            <button>-</button>
             <br>
             <button>0</button>
             <button>.</button>
             <button>(-)</button>
+            <button>*</button>
             <br>
-            <button>÷</button>
-            <button>+</button>
-            <button>-</button>
             <button id="enter">enter</button>
+            <button id="clear">clear</button>
+            <button id="del">Del</button>
+    
             
         </div>
         <!--<div class = "display">
@@ -47,6 +51,6 @@
         </div>-->
 
     </div>
-<script src="main.js"></script>
+<!--<script src="main.js"></script>-->
 </body>
 </html>
