clear button doesnt work, decimal button doesnt work, dont know why

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
             <button id="three" onclick="pushThree()">3</button>
             <button id="minus">-</button>
             <br>
-            <button id="zero" onclick="pushZero();">0</button>
+            <button id="zero" onclick="pushZero()">0</button>
             <button id="float">.</button>
             <button id ="neg">(-)</button>
             <button id= "multiply">*</button>
             <br>
             <button id="enter">enter</button>
-            <button id="clear">clear</button>
-            <button id="del">Del</button>
+            <button id="clear" onclick="clear()">clear</button>
+            <button id="del" onclick="remove()">Del</button>
         </div>
         <!--<div class = "display">
             
