dot buttton works now. I dont even know how

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <button id="minus">-</button>
             <br>
             <button id="zero" onclick="pushZero()">0</button>
-            <button id="float">.</button>
+            <button id="float" onclick="pushPeriod()">.</button>
             <button id ="neg">(-)</button>
             <button id= "multiply">*</button>
             <br>
