--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <br>
             <button id="zero" onclick="pushZero()">0</button>
             <button id="float" onclick="pushPeriod()">.</button>
-            <button id ="neg">(-)</button>
+            <button id ="neg" onclick="pushNegative()">(-)</button>
             <button id= "multiply">*</button>
             <br>
             <button id="enter">enter</button>
