enter button works as intended

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <button id ="neg" onclick="pushNegative()">(-)</button>
             <button id= "multiply">*</button>
             <br>
-            <button id="enter">enter</button>
+            <button id="enter" onclick="enter()">enter</button>
             <button id="clear" onclick="clear()">clear</button>
             <button id="del" onclick="remove()">Del</button>
         </div>
