clear button works

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <button id= "multiply">*</button>
             <br>
             <button id="enter" onclick="enter()">enter</button>
-            <button id="clear" onclick="clear()">clear</button>
+            <button id="clear" onclick="removeall()"> clear </button>
             <button id="del" onclick="remove()">Del</button>
         </div>
         <!--<div class = "display">
