--- a/index.html
+++ b/index.html
@@ -14,33 +14,35 @@
             <h5>IT-48 Bootleg Edition <br> AMOGUS Instruments</h5>
         </div>
         <div class="screen">
-            <h1 id="number">5318008</h1>
+            <h2 id="number">5318008</h2>
+            <h5 id="operand"></h5>
         </div>
         <div class = "button-container">
             <button id = "seven" onclick="pushSeven()">7</button>
             <button id = "eight" onclick="pushEight()">8</button>
             <button id = "nine" onclick="pushNine()">9</button>
-            <button id="divide">÷</button>
+            <button id="divide" onclick="divide()">÷</button>
             <br>
             <button id = "four" onclick="pushFour()">4</button>
             <button id = "five" onclick="pushFive()">5</button>
             <button id = "six" onclick="pushSix()">6</button>
-            <button id = "add">+</button>
+            <button id = "add" onclick="add()">+</button>
             <br>
             <button id="one" onclick="pushOne()">1</button>
             <button id="two" onclick="pushTwo()">2</button>
             <button id="three" onclick="pushThree()">3</button>
-            <button id="minus">-</button>
+            <button id="minus" onclick="subtract()">-</button>
             <br>
             <button id="zero" onclick="pushZero()">0</button>
             <button id="float" onclick="pushPeriod()">.</button>
             <button id ="neg" onclick="pushNegative()">(-)</button>
-            <button id= "multiply">*</button>
+            <button id= "multiply" onclick="multiply()">*</button>
             <br>
             <button id="enter" onclick="enter()">enter</button>
             <button id="clear" onclick="removeall()"> clear </button>
             <button id="del" onclick="remove()">Del</button>
         </div>
+        
         <!--<div class = "display">
             
         </div>
