yeah I dont know whats going on

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h5>IT-48 Bootleg Edition <br> AMOGUS Instruments</h5>
         </div>
         <div class="screen">
-            <h2 id="number">5318008</h2>
+            <h2 id="number"></h2>
             <h5 id="operand"></h5>
         </div>
         <div class = "button-container">
@@ -43,13 +43,6 @@
             <button id="del" onclick="remove()">Del</button>
         </div>
         
-        <!--<div class = "display">
-            
-        </div>
-        <div class = "buttons">
-            Hello
-        </div>-->
-
     </div>
 <script src="main.js"></script>
 </body>
