Mostly working model. Missing float functionality Still only works if done in the input enter operand enter order

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <h5>IT-48 Bootleg Edition <br> AMOGUS Instruments</h5>
         </div>
         <div class="screen">
-            <h2 id="number">number</h2>
-            <h5 id="operand">operand</h5>
+            <h2 id="number">0</h2>
+            <h5 id="operand"></h5>
         </div>
         <div class = "button-container">
             <button id = "seven" onclick="pushSeven()">7</button>
