--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
    <script src="main.js"></script> 
 </head>
 <body>
+    For the moment this only works if done in the: <br> 
+    (userinpupt) enter operand (userinput) enter operand (userinput)... order
     <div class = "container">
         <div class = "display">
             <h5>IT-48 Bootleg Edition <br> AMOGUS Instruments</h5>
